<resources>

    <string name="app_name">Alooh</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect_to_device_ask_msg">ALOOH 디바이스를 연결하시겠습니까?</string>
    <string name="choose_device_connecting">연결할 디바이스를 선택해 주십시오.</string>
    <string name="choose_wifi_connecting">ALOOH 디바이스가 사용할 \nWiFi 네트워크를 선택하십시오.</string>
    <string name="insert_pwd">WiFi 네트워크의 패스워드를\n 입력해 주세요.</string>
    <string name="set_device_name">ALOOH 디바이스 이름을 설정해주세요.</string>
    <string name="noti_fail_reg_device">ALOOH 디바이스 등록에 실패했습니다.\n디바이스 상태를 체크해 주세요!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ssid">SSID</string>
    <string name="quickguide_summary">ALOOH 클라우드 연결과 디바이스 IDE를\n 통해 프로그래밍하는 과정 입니다.</string>
    <string name="quickguide_phase1">1. ALOOH 클라우드에 로그인을 합니다.</string>
    <string name="quickguide_phase2">2. 개발하기 단계에서 New Project을 생성해 주십시오.</string>
    <string name="quickguide_phase3">3. ALOOH 디바이스를 등록 및 선택해 주십시오.</string>
    <string name="quickguide_phase4">4. 디바이스 IDE로 연결됩니다. IDE를 통해 Java Script Program을 개발해 보십시오.</string>
	<string name="move_to_cloud_ask_msg">그럼 이제 ALOOH 클라우드로\n이동하시겠습니까?</string>
	<string name="id">아이디</string>
	<string name="passwd">비밀번호</string>
	<string name="confirm_passwd">비밀번호확인</string>
	<string name="auth_email">인증 이메일 발송하기</string>
	<string name="agree_terms"><u>서비스 이용약관, 개인정보보호 정책 동의</u></string>
	<string name="find_passwd"><u>비밀번호 찾기</u></string>
	<string name="signup"><u>Sign Up</u></string>
	<string name="signin">Sign In</string>
	<string name="request_agree">약관을 동의해 주세요.</string>
	<string name="insert_id">이메일을 입력하세요.</string>
	<string name="insert_device_name">디바이스 이름을 입력해 주세요.</string>
	<string name="error_login">로그인 에러</string>
	<string name="incorrect_login">로그인 정보가 일치하지 않습니다.</string>
	<string name="error_different_passwd_eachother">비밀번호가 일치하지 않습니다.</string>
	<string name="insert_passwd">비밀번호를 입력하세요.</string>
	<string name="error_fail_create_user">사용자 등록에 실패했습니다.</string>
	<string name="connect_to_quickguide_ask_msg">ALOOH 클라우드에 디바이스가\n정상적으로 등록되었습니다.\n다음 단계 확인을 위해 퀵가이드로\n이동하시겠습니까?</string>
	<string name="connect_to_quickguide_ask_msg_for_chgnet">Wi-Fi 정보가 디바이스에 정상적으로 업데이트 되었습니다.\n다음 단계 확인을 위해 퀵가이드로\n이동하시겠습니까?</string>	
	<string name="error_fail_regist_device">장치 등록을 실패하였습니다.</string>
	<string name="invaild_email">유효하지 않는 이메일입니다.</string>
	<string name="invaild_password">비밀번호는 6~15자 이내로 입력하셔야 합니다.</string>
	<string name="email_using">이미 사용중인 이메일입니다.</string>
	<string name="noti_find_password">으로 비밀번호 초기화 메일을 발송하였습니다.\n비밀번호 초기화 메일을 통해 비밀번호를 변경하시기 바랍니다.</string>
	<string name="noti_send_email">으로 인증 메일을 발송하였습니다.\n 인증 메일을 통해 계정 인증 후 로그인 하시기 바랍니다.</string>
	<string name="noti_relogin_auth_email">이메일 인증 후 다시 로그인 하시기 바랍니다.</string>
	<string name="noti_not_find_email">이메일을 찾을 수가 없습니다.</string>
	<string name="will_connect_device">장치와 연결하시겠습니까?</string>
	<string name="will_connect_wifi">Wi-Fi와 연결하시겠습니까?</string>
	<string name="will_finish_app">설정앱을 종료하시겠습니까?</string>
	<string name="failed_to_connect_device">디바이스  연결에 실패했습니다.\n디바이스 상태를 체크해주세요.</string>
	<string name="connecting">연결중</string>
	<string name="reset">Reset</string>
	<string name="reset_guide_msg">비밀번호를 찾기 위해 아이디(이메일형식)를\n 입력하신후, Reset 버튼을 클릭하시면\n 입력하신 이메일 주소로 안내메일이 발송됩니다.</string>
	<string name="example_email_account">user@mail.com</string>
	<string name="confirm">확인</string>
	<string name="noti">알림</string>
	<string name="example_passwd">영문,숫자 6~15자</string>
	<string name="failed_to_connect_wifi">Wifi 연결에 실패 했습니다.</string>
	<string name="failed_to_regist_device">디바이스 등록이 실패하였습니다.</string>
	<string name="noti_same_device_name">중복된 디바이스명이 있습니다.</string>
	<string name="noti_wait_moment">잠시만 기다려 주세요.</string>
	<string name="login">로그인</string>
	<string name="failed_to_search_device">디바이스 검색에 실패하였습니다.\n디바이스 상태를 체크해 주세요!</string>
	<string name="searching">검색중</string>
	<string name="error_wifi_passwd">Wifi 비밀번호 에러</string>
	<string name="noti_sent_email">이메일이 전송되었습니다.</string>
	<string name="noti_check_wifi_status">Wi-Fi를 켜주세요.</string>
	<string name="error_network">네트워크 에러</string>
	<string name="error_server">서버 에러</string>
	<string name="regist_device">디바이스 등록</string>
	<string name="regist_user">사용자 등록</string>
	<string name="will_close_app">앱을 종료하시겠습니까?</string>
	<string name="warn_wifi_impossible"><div style="text-align: center;"> SNOW_AP에 연결되어 로그인이 불가능합니다.\n  Wi-Fi 설정화면으로 이동합니다.</div></string>
	<string name="alreay_used_email">이미 사용중인 이메일입니다.</string>
	<string name="close">닫기</string>
	<string name="onlychangewifi">Wi-Fi 변경</string>
	<string name="description_onlywifichange">*디바이스 최초 등록시에는 디바이스명을 등록하는 절차를 우선적으로 진행해야 합니다.\n 디바이스 등록 후 디바이스에 새로운 Wi-Fi로의 연결이 필요할 시 Wi-Fi를 변경할 수 있습니다.</string>
</resources>
