<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    android:padding="4dip" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/alooh_logo_w9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:paddingLeft="30dp" 
        android:paddingRight="30dp" >

        <TextView
            android:id="@+id/ImageView01"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/id"
            android:gravity="center"
            android:scaleType="fitXY"
            android:background="@drawable/input_head_bg" />

        <EditText
            android:id="@+id/id_edt"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingLeft="7dp"
            android:layout_weight="1"
            android:textColor="#FF000000"
            android:background="@drawable/login_input_bg"
            android:textCursorDrawable="@drawable/blackcursor"
            android:inputType="textUri"
            
            android:hint="@string/example_email_account"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:orientation="horizontal"
		android:layout_marginTop="10dp"        
        android:paddingLeft="30dp" 
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:text="@string/passwd"
            android:gravity="center"
            android:background="@drawable/input_head_bg" />

        <EditText
            android:id="@+id/passwd_edt"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:background="@drawable/login_input_bg"
            android:textColor="#FF000000"
            android:textCursorDrawable="@drawable/blackcursor"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="30dp"
	    android:paddingRight="30dp"
	    android:paddingTop="30dp">
	    
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/signin"
        android:background="@drawable/btn_bg"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        
        android:paddingBottom="7dp"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/find_passwd_tv"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/find_passwd"
            android:textColorLink="#ff0000ff"
            android:textColor="#FF000000"
            android:gravity="center"
            />
            <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#FF000000"
            android:text=" | " />"
        <TextView 
            android:id="@+id/signup_tv"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColorLink="#ff0000ff"
            android:textColor="#FF000000"
            android:text="@string/signup"
            />
    </LinearLayout>
</LinearLayout>
    